# AutoSubSync

./: .dockerignore  .gitignore  CHANGELOG  DOCKER.md  Dockerfile  README.md  SubtitleSync.pyw  build.py  build.spec  build_pypi.py  create_desktop_shortcut.bat  docker-compose.yml  pyproject.toml  requirements.txt  run-docker.bat  run-docker.sh  run.bat
.github/workflows/: app.yml  test-all.yml  test-linux.yml  test-macos-amd.yml  test-macos-arm.yml  test-windows.yml  test.yml  test_manylinux.yml  test_ubuntu.yml
docker/: convert_qt.py  start.sh  supervisord.conf
main/: AutoSubSync.py  AutoSubSync.pyw  SubtitleSync.pyw  __init__.py  alass_encodings.py  call_autosubsync.py  call_ffsubsync.py  config.json  config.py  constants.py  gui.py  gui_auto_pairing.py  gui_automatic_tab.py  gui_batch_mode.py  gui_load_library.py  gui_log_window.py  gui_manual_tab.py  gui_multiple_subs.py  icon.icns  last_known_directory.txt  main.py  main_docker.py  processed_items_manager.py  qt_compat.py  requirements.txt  subtitle_converter.py  subtitle_extractor.py  sync_auto.py  sync_manual.py  texts.py  texts_constants.py  theme.py  utils.py  version.py
main/alass/: ReadMe.txt
main/assets/: icon.icns
main/functions/: get_config.py  get_platform.py
main/resources/: README.md  __init__.py  config.json  ffmpeg_download.py  ffsubsync_bin_download.py  versions.json
main/resources/hooks/: hook-tkinterdnd2.py
old/: AutoSubSync.py  alass_encodings.py  texts_constants.py
old/functions/: get_desktop_path.py
old/resources/: ffmpeg_download.py  ffsubsync_bin_download.py
old/resources/hooks/: hook-tkinterdnd2.py
pyqt/: constants.py  gui.py  gui_auto_pairing.py  gui_automatic_tab.py  gui_batch_mode.py  gui_log_window.py  gui_manual_tab.py  main.py  requirements.txt  subtitle_converter.py  subtitle_extractor.py  sync_auto.py  sync_manual.py  texts.py  texts_constants.py  utils.py
